--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
     sdk: flutter
   audioplayers: ^3.0.1
   video_player: ^2.5.1
+#  google_sign_in: ^5.2.1
 
 
   # The following adds the Cupertino Icons font to your application.
